--- a/src/layouts/authentication/sign-in/SignInForm.css
+++ b/src/layouts/authentication/sign-in/SignInForm.css
@@ -16,7 +16,7 @@ body {
   height: 420px;
   position: absolute;
   transform: translate(-50%,-50%);
-  left: 50%;
+  left: 75%;
   top: 50%;
 }
 
@@ -46,14 +46,14 @@ body {
   bottom: -80px;
 }
 
-form {
+.form {
   height: 380px;
   width: 400px;
   background-color: rgba(255,255,255,0.13);
   position: absolute;
   transform: translate(-50%,-50%);
   top: 50%;
-  left: 50%;
+  left: 75%;
   border-radius: 10px;
   backdrop-filter: blur(10px);
   border: 2px solid rgba(255,255,255,0.1);
@@ -61,7 +61,7 @@ form {
   padding: 50px 35px;
 }
 
-form * {
+.form * {
   font-family: 'Poppins',sans-serif;
   color: #000;
   letter-spacing: 0.5px;
@@ -69,21 +69,21 @@ form * {
   border: none;
 }
 
-form h3 {
+.form h3 {
   font-size: 32px;
   font-weight: 500;
   line-height: 42px;
   text-align: center;
 }
 
-label {
+.label {
   display: block;
   margin-top: 30px;
   font-size: 16px;
   font-weight: 500;
 }
 
-input {
+.input {
   height: 50px;
   width: 100%;
   background-color: rgba(255,255,255,0.5);
