--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,20 @@
 .css-1dur2uz-MuiPaper-root-MuiDialog-paper {
-    overflow: hidden !important;
+  overflow: hidden !important;
 }
-.css-1xqquov-MuiTreeItem-content.Mui-selected{
-    background-color: white !important;
+.css-1xqquov-MuiTreeItem-content.Mui-selected {
+  background-color: white !important;
 }
-.css-15v22id-MuiAccordionDetails-root{
-    padding: 10px 0px !important;
+.css-15v22id-MuiAccordionDetails-root {
+  padding: 10px 0px !important;
+}
+.css-lvl4a5-MuiDrawer-docked .MuiDrawer-paper {
+  background: white !important;
+}
+
+.css-1x3v3vy {
+  background: linear-gradient(195deg, rgb(161, 98, 5), rgb(223, 160, 47)) !important;
+  color: white;
+}
+.css-1mc398b {
+  background: #1692b4 !important;
 }
